# auto-structure-analysis

./: .gitignore  PHASE5_SUMMARY.md  PLAN.md  README.md
backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  cloudbuild.yaml  pyproject.toml
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  health.py
backend/app/services/: aruco_detector.py  code_checks.py  edge_detector.py  fea_solver.py  materials.py  model_server.py  report_generator.py  structure_detector.py  yolo_detector.py
backend/app/utils/: image_processing.py  validation.py
backend/ml/: augment.py  benchmark.py  config.yaml  evaluate.py  generate_synthetic.py  train.py  validate_dataset.py
backend/ml/dataset/: README.md  train.txt  val.txt
backend/ml/dataset/labels/: truss_0015.txt  truss_0018.txt  truss_0027.txt  truss_0029.txt  truss_0035.txt  truss_0038.txt  truss_0054.txt  truss_0066.txt  (+57 more)
backend/tests/: conftest.py  test_analysis_endpoints.py  test_aruco.py  test_auth.py  test_code_checks.py  test_config.py  test_data_augmentation.py  test_database.py  test_dataset_validation.py  test_edge_detector.py  test_fea_solver.py  test_frame_solver.py  test_hardening.py  test_health.py  test_load_combinations.py  test_marker_endpoint.py  test_materials.py  test_model_server.py  test_pipeline.py  test_report_endpoint.py  test_report_generator.py  test_structure_detector.py  test_synthetic_generator.py  test_training.py  test_validation.py  test_yolo_detector.py
(+51 files in other folders)
